--- a/examples/cs/cloudsql-proxy-cs/cloudsql-proxy-cs.csproj
+++ b/examples/cs/cloudsql-proxy-cs/cloudsql-proxy-cs.csproj
@@ -7,7 +7,7 @@
 
   <Target Name="BuildCloudSQLProxyDLL" BeforeTargets="CoreBuild" >
   <Message Importance="High" Text="Building GO Cloud SQL Proxy Dll" />
-	<!--Exec Command="$(ProjectDir)..\..\..\lib\cloud_sql_proxy\build.bat" /-->
+	<Exec Command="$(ProjectDir)..\..\..\lib\cloud_sql_proxy\build.bat" />
 	<Move
 		SourceFiles="$(ProjectDir)..\..\..\lib\cloud_sql_proxy\cloud_sql_proxy.dll"
 		DestinationFolder="$(TargetDir)" />
