--- a/examples/cs/cmd/cmd.csproj
+++ b/examples/cs/cmd/cmd.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="cloudsql-proxy-cs, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\cloudsql-proxy-cs.1.0.0\lib\net46\cloudsql-proxy-cs.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -49,12 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\cloudsql-proxy-cs\cloudsql-proxy-cs.csproj">
-      <Project>{b73f1aff-983c-49e3-b861-78c1a383e601}</Project>
-      <Name>cloudsql-proxy-cs</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
