Added Targets file

--- a/examples/cs/cloudsql-proxy-cs/cloudsql-proxy-cs.csproj
+++ b/examples/cs/cloudsql-proxy-cs/cloudsql-proxy-cs.csproj
@@ -21,6 +21,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="build\cloudsql-proxy-cs.targets" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <None Include="$(MSBuildProjectDirectory)\runtimes\cloud_sql_proxy.dll">
       <Pack>True</Pack>
       <PackagePath>runtimes\win-x64\native</PackagePath>
