--- a/examples/cs/cmd/cmd.csproj
+++ b/examples/cs/cmd/cmd.csproj
@@ -1,13 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <StartupObject></StartupObject>
+    <ApplicationIcon />
+    <Platforms>AnyCPU</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="cloudsql-proxy-cs" Version="1.0.1" />
+    <ProjectReference Include="..\cloudsql-proxy-cs\cloudsql-proxy-cs.csproj" />
   </ItemGroup>
+
+  <!--<ItemGroup>
+    <PackageReference Include="cloudsql-proxy-cs" Version="1.0.1" />
+  </ItemGroup>-->
 
 </Project>
