--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,5 @@ jobs:
         uses: actions/checkout@v2
 
       - name: build linux binary
-        uses: ./
+        uses: ./.github/actions/build-go
         id: build-go
