--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go
-        uses: actions/setup-go@v1
+        uses: actions/setup-go@master
         with:
           go-version: '1.14.1'
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Check out code into the Go module directory
-        uses: actions/checkout@v2
+        uses: actions/checkout@master
       - name: Build Linux
         run: export GOOS=; export GOARCH=; export CGO_ENABLED=; export CXX=; export CC=; go build -buildmode=c-shared -o artifacts/cloud_sql_proxy.so ./lib/cloud_sql_proxy/
+      - name: Upload artifacts
+        uses: actions/upload-artifact@master
+        with:
+          name: cloud_sql_proxy_libs
+          path: artifact
