--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
         uses: actions/upload-artifact@master
         with:
           name: cloud_sql_proxy_libs
-          path: ../artifact
+          path: ./artifacts
