--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build Windows x64
         run: export GOOS=windows; export GOARCH=amd64; export CGO_ENABLED=1; export CXX=x86_64-w64-mingw32-g++; export CC=x86_64-w64-mingw32-gcc; go build -buildmode=c-shared -o ./artifacts/cloud_sql_proxy_x64.dll ./lib/cloud_sql_proxy/
       - name: Build Windows x86
-        run: export GOOS=windows; export GOARCH=386; export CGO_ENABLED=1; export CXX=x86_64-w64-mingw32-g++; export CC=x86_64-w64-mingw32-gcc; go build -buildmode=c-shared -o ./artifacts/cloud_sql_proxy_x86.dll ./lib/cloud_sql_proxy/
+        run: export GOOS=windows; export GOARCH=386; export CGO_ENABLED=1; export CXX=i686-w64-mingw32-g++; export CC=i686-w64-mingw32-gcc; go build -buildmode=c-shared -o artifacts/cloud_sql_proxy_x86.dll ./lib/cloud_sql_proxy
       - name: Upload artifacts
         uses: actions/upload-artifact@master
         with:
