--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Go
+      - name: Setup Go
         uses: actions/setup-go@master
         with:
           go-version: '1.14.1'
@@ -32,3 +32,34 @@ jobs:
         with:
           name: cloud_sql_proxy_libs
           path: ./artifacts
+  build_package:
+    name: Build Package
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: Install unzip
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install unzip
+    - uses: actions/checkout@master
+    - name: Download Artifacts
+      uses: actions/download-artifact@master
+      with:
+        name: cloud_sql_proxy_libs
+        path: .examples\cs\cloudsql-proxy-cs\runtimes
+    - name: Unzip Artifacts
+        run: |
+           unzip .examples\cs\cloudsql-proxy-cs\runtimes\cloud_sql_proxy_libs
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 3.1.100
+    - name: Build with dotnet
+      run: |
+        dotnet build --configuration Release
+        cp *.nupkg ./artifacts
+    - name: Upload artifacts
+      uses: actions/upload-artifact@master
+      with:
+        name: cloud_sql_proxy_package
+        path: ./artifacts
