--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,10 +46,10 @@ jobs:
       uses: actions/download-artifact@master
       with:
         name: cloud_sql_proxy_libs
-        path: .examples\cs\cloudsql-proxy-cs\runtimes
+        path: examples/cs/cloudsql-proxy-cs/runtimes
     - name: Unzip Artifacts
       run: |
-        unzip .examples\cs\cloudsql-proxy-cs\runtimes\cloud_sql_proxy_libs
+        unzip examples/cs/cloudsql-proxy-cs/runtimes/cloud_sql_proxy_libs
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
