--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,8 @@ jobs:
       with:
         name: cloud_sql_proxy_libs
         path: examples/cs/cloudsql-proxy-cs/runtimes
-    - run: ls examples/cs/cloudsql-proxy-cs/runtimes
+    - name: List Artifacts
+      run: ls examples/cs/cloudsql-proxy-cs/runtimes
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
