--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,9 @@ jobs:
       run: dotnet build --configuration Release
       working-directory: ./examples/cs/cloudsql-proxy-cs
     - name: Copy Package
-      run: cp ./examples/cs/cloudsql-proxy-cs/bin/Release/*.nupkg ./artifacts/
+      run: |
+        cp -v ./examples/cs/cloudsql-proxy-cs/bin/Release/*.nupkg ./artifacts
+        ls ./artifacts
     - name: Upload artifacts
       uses: actions/upload-artifact@master
       with:
