--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
       working-directory: ./examples/cs/cloudsql-proxy-cs
     - name: Copy Package
       run: |
-        cp -v ./examples/cs/cloudsql-proxy-cs/bin/Release/*.nupkg ./artifacts
+        cp -v ./examples/cs/cloudsql-proxy-cs/bin/Release/*.nupkg ./artifacts/
         ls ./artifacts
     - name: Upload artifacts
       uses: actions/upload-artifact@master
