--- a/examples/cs/cmd/cmd.csproj
+++ b/examples/cs/cmd/cmd.csproj
@@ -1,14 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <ApplicationIcon />
-    <Platforms>AnyCPU</Platforms>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <ApplicationIcon />
+        <Platforms>AnyCPU</Platforms>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="cloudsql-proxy-cs" Version="1.0.3" />
-  </ItemGroup>
+    <!--<ItemGroup>
+    <ProjectReference Include="..\cloudsql-proxy-cs\cloudsql-proxy-cs.csproj" />
+  </ItemGroup>-->
+
+    <ItemGroup>
+        <PackageReference Include="cloudsql-proxy-cs" Version="1.0.3" />
+    </ItemGroup>
 
 </Project>
