--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,28 +37,37 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: Download Artifacts
-      uses: actions/download-artifact@master
-      with:
-        name: cloud_sql_proxy_libs
-        path: examples/cs/cloudsql-proxy-cs/runtimes
-    - name: List Artifacts
-      run: ls examples/cs/cloudsql-proxy-cs/runtimes
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 3.1.100
-    - name: Build with dotnet
-      run: dotnet build --configuration Release
-      working-directory: ./examples/cs/cloudsql-proxy-cs
-    - name: Copy Package
-      run: |
-        mkdir artifacts
-        cp -v ./examples/cs/cloudsql-proxy-cs/bin/Release/*.nupkg ./artifacts/
-        ls ./artifacts
-    - name: Upload artifacts
-      uses: actions/upload-artifact@master
-      with:
-        name: cloud_sql_proxy_package
-        path: ./artifacts
+      - uses: actions/checkout@master
+      - name: Download Artifacts
+        uses: actions/download-artifact@master
+        with:
+          name: cloud_sql_proxy_libs
+          path: examples/cs/cloudsql-proxy-cs/runtimes
+      - name: List Artifacts
+        run: ls examples/cs/cloudsql-proxy-cs/runtimes
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 3.1.100
+      - name: Build with dotnet
+        run: dotnet build --configuration Release
+        working-directory: ./examples/cs/cloudsql-proxy-cs
+      - name: Copy Package
+        run: |
+          mkdir artifacts
+          cp -v ./examples/cs/cloudsql-proxy-cs/bin/Release/*.nupkg ./artifacts/
+          ls ./artifacts
+      - name: Upload artifacts
+        uses: actions/upload-artifact@master
+        with:
+          name: cloud_sql_proxy_package
+          path: ./artifacts
+      - name: publish on version change
+        uses: rohith/publish-nuget@v2
+        with:
+          PROJECT_FILE_PATH: examples/cs/cloudsql-proxy-cs/cloudsql-proxy-cs.csproj # Relative to repository root
+          VERSION_REGEX: <Version>(.*)<\/Version> # Regex pattern to extract version info in a capturing group
+          TAG_COMMIT: true # Flag to enable / disalge git tagging
+          TAG_FORMAT: v* # Format of the git tag, [*] gets replaced with version
+          NUGET_KEY: ${{secrets.NUGET_API_KEY}} # nuget.org API key
+          # PACKAGE_NAME: NuGet package name, required when it's different from project name. Defaults to project name
