XML Documentation Changes

--- a/examples/cs/cloudsql-proxy-cs/cloudsql-proxy-cs.csproj
+++ b/examples/cs/cloudsql-proxy-cs/cloudsql-proxy-cs.csproj
@@ -24,6 +24,10 @@
     <Version>1.0.7</Version>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.0|AnyCPU'">
+    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Include="build\cloudsql-proxy-cs.targets" />
   </ItemGroup>
