--- a/examples/cs/cloudsql-proxy-cs/cloudsql-proxy-cs.csproj
+++ b/examples/cs/cloudsql-proxy-cs/cloudsql-proxy-cs.csproj
@@ -30,9 +30,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="build\cloudsql-proxy-cs.targets" />
+    <None Include="build\cloudsql-proxy-cs.targets" Pack="true" PackagePath="build\">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
-  
+ 
   <ItemGroup>
     <None Include="$(MSBuildProjectDirectory)\runtimes\cloud_sql_proxy_x64.dll">
       <Pack>True</Pack>
