--- a/examples/cs/cloudsql-proxy-cs/cloudsql-proxy-cs.csproj
+++ b/examples/cs/cloudsql-proxy-cs/cloudsql-proxy-cs.csproj
@@ -4,6 +4,7 @@
         <TargetFrameworks>netstandard2.0</TargetFrameworks>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <Platforms>AnyCPU</Platforms>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -20,8 +21,8 @@
 
     <PropertyGroup>
         <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
-        <AssemblyVersion>1.1.1.0</AssemblyVersion>
-        <FileVersion>1.1.1.0</FileVersion>
+        <AssemblyVersion>1.1.2.0</AssemblyVersion>
+        <FileVersion>1.1.2.0</FileVersion>
         <Version>1.1.0</Version>
     </PropertyGroup>
 
@@ -70,18 +71,5 @@
             <Pack>True</Pack>
             <PackagePath></PackagePath>
         </None>
-    </ItemGroup>
-
-    <ItemGroup>
-      <PackageReference Include="Google.Protobuf" Version="3.12.3" />
-      <PackageReference Include="Grpc" Version="2.29.0" />
-      <PackageReference Include="Grpc.Tools" Version="2.29.0">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
-    </ItemGroup>
-
-    <ItemGroup>
-        <Protobuf Include="protos\proxy-status.proto" GrpcServices="Server" />
     </ItemGroup>
 </Project>
